Fixed a layout issue in Firefox

--- a/app/assets/less/hiof-articles-view.less
+++ b/app/assets/less/hiof-articles-view.less
@@ -33,7 +33,7 @@
   }
   // Override for FF
   .box-news-library{
-  	width: 100%;
+    width: 100%;
   }
 
 
@@ -59,10 +59,11 @@
       min-height: auto !important;
       float: left;
       margin: 0;
+      width: 100%;
     }
   }
   .page-employee{
-  	border: none;
+    border: none;
   }
 
   // Remove text-decoration on the paragraph when the article is hovered
@@ -257,22 +258,22 @@
     margin-bottom: 20px;
   }
   .box-news{
-  	.outlet{
-  		width: 100%;
-			margin: 0;
-  	}
-  	.lo-half{
-  		width: 50%;
-  		&:nth-child(even){
-  			padding-left: 1rem;
-  		}
-  		&:nth-child(odd){
-  			padding-right: 1rem;
-  		}
-  	}
-  	.article-entry{
-  		border: 1px solid #eee;
-  	}
+    .outlet{
+      width: 100%;
+      margin: 0;
+    }
+    .lo-half{
+      width: 50%;
+      &:nth-child(even){
+        padding-left: 1rem;
+      }
+      &:nth-child(odd){
+        padding-right: 1rem;
+      }
+    }
+    .article-entry{
+      border: 1px solid #eee;
+    }
   }
 }
 
